# Hello

./: .gitignore  README.md
src/rust/: Cargo.toml
src/rust/experiments/src/: lib.rs
src/rust/mini_projects/blog/src/: lib.rs
src/rust/mini_projects/minigrep/src/: lib.rs
src/rust/petgraph_test/: Cargo.toml
src/rust/petgraph_test/src/: main.rs
src/rust/rust_lang/: hello  hello.rs  primitives  primitives.rs
src/rust/src/: arrays.rs  hash_map.rs  hash_sets.rs  iterators.rs  string_formatting.rs  strings.rs  tuples.rs  vectors.rs
src/rust/udemy_beginner_course/: 43_drop.rs  44_operator_overloading.rs  45_static_dispatch.rs  46_dynamic_dispatch.rs  47_why_dynamic_dispatch.rs  48_vectors_of_different_objects.rs  49_ownership.rs  50_borrowing.rs  51_lifetime.rs  52_lifetime_in_structure_implementation.rs  53_reference_counted_variables_rc.rs  54_atomic_reference_counted_variables_arc.rs  55_mutex.rs  56_circular_references.rs  57_threads_spawn_join.rs  58_consuming_crates.rs  59_main.rs  closures.rs  function_arguments.rs  generics.rs  higher_order_functions.rs  into.rs  main.rs  methods.rs  number_guessing_game.rs  option.rs  pattern_matching.rs  slices.rs  string_formatting.rs  trait_parameters.rs  traits.rs
src/rust/udemy_beginner_course/59_building_crate/: Cargo.toml
src/rust/udemy_beginner_course/59_building_crate/src/: lib.rs
src/rust/udemy_beginner_course/59_building_crate/src/greetings/: english.rs
src/rust/udemy_beginner_course/59_building_crate/src/greetings/doc/: search-index.js  (+2 more)
src/rust/udemy_beginner_course/59_building_crate/tests/: lib.rs
(+85 files in other folders)
