[package]
name = "rust"
version = "1.0.0"
authors = ["Christian D. Valenti <christian.valenti97@gmail.com"]
edition = "2021"

[dependencies]
rand = "0.8.5"
petgraph = "0.6.2"
phrases = { path = "udemy_beginner_course/59_building_crate" }

[[bin]]
name = "consuming_traits"
path = "udemy_beginner_course/59_main.rs"
